objects/partner_portal_prospect__c.object
<CustomObject>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Logo</fullName>
                </value>
                <value>
                    <fullName>Existing Business - Cross Sell</fullName>
                </value>
                <value>
                    <fullName>Existing Business - New Line of Business</fullName>
                </value>
                <value>
                    <fullName>Existing Business - Platform Migration</fullName>
                </value>
                <value>
                    <fullName>Existing Business - Expansion</fullName>
                    <isActive>false</isActive>
                    <label>Existing Business - Expansion</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_any_existing_Genesys_Solution__c</fullName>
        <inlineHelpText>Does this prospect currently own and use any existing Genesys Solution?</inlineHelpText>
        <label>Use any existing Genesys Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_Portal_Opportunity_Registration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_in_Place__c</fullName>
        <description>Value is required on Portal
The values in the field are the same as we have on the opportunity “Who_did_Genesys_Replace__c”</description>
        <label>Vendor in Place</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>[24]7</fullName>
                </value>
                <value>
                    <fullName>8X8</fullName>
                </value>
                <value>
                    <fullName>Adeptra</fullName>
                </value>
                <value>
                    <fullName>Adobe</fullName>
                </value>
                <value>
                    <fullName>Afiniti</fullName>
                </value>
                <value>
                    <fullName>Akcelerant</fullName>
                </value>
                <value>
                    <fullName>Alcatel-Lucent</fullName>
                </value>
                <value>
                    <fullName>Altigen</fullName>
                </value>
                <value>
                    <fullName>Altitude</fullName>
                </value>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Appian</fullName>
                </value>
                <value>
                    <fullName>ASC Telecom</fullName>
                </value>
                <value>
                    <fullName>Aspect (Voxeo)</fullName>
                </value>
                <value>
                    <fullName>Asterix</fullName>
                    <label>Asterisk</label>
                </value>
                <value>
                    <fullName>Avaya (Nortel)</fullName>
                </value>
                <value>
                    <fullName>Bridgetec</fullName>
                </value>
                <value>
                    <fullName>Broadsoft</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>Calabrio</fullName>
                </value>
                <value>
                    <fullName>CallCopy</fullName>
                </value>
                <value>
                    <fullName>Call Fire</fullName>
                </value>
                <value>
                    <fullName>Call Miner</fullName>
                </value>
                <value>
                    <fullName>Capgemini (Prosodie)</fullName>
                </value>
                <value>
                    <fullName>Centurion</fullName>
                </value>
                <value>
                    <fullName>Chorus.ai</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Clarity Connect</fullName>
                </value>
                <value>
                    <fullName>ClickFox</fullName>
                </value>
                <value>
                    <fullName>Collab9</fullName>
                </value>
                <value>
                    <fullName>Computer Talk</fullName>
                    <label>ComputerTalk</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_this_opportunity_sourced_by_Genesys__c</fullName>
        <inlineHelpText>Was this opportunity sourced by Genesys</inlineHelpText>
        <label>Was this opportunity sourced by Genesys</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_Expected_Close_Date__c</fullName>
        <label>What is the Expected Close Date?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>What_is_value_proposition_for_this_opp__c</fullName>
        <inlineHelpText>What is the value proposition for this opportunity, and which Genesys solution is being proposed?</inlineHelpText>
        <label>What is value proposition for this opp</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_at_Genesys_is_your_Channel_Manager__c</fullName>
        <label>Channel Manager</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Regions__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Alan Hylton</fullName>
                </value>
                <value>
                    <fullName>Andrea Badalamenti</fullName>
                </value>
                <value>
                    <fullName>Carolina Castro</fullName>
                </value>
                <value>
                    <fullName>Daniel Cody</fullName>
                </value>
                <value>
                    <fullName>Daniel Oates</fullName>
                </value>
                <value>
                    <fullName>Danny Pompeo</fullName>
                </value>
                <value>
                    <fullName>Dario Carbone</fullName>
                </value>
                <value>
                    <fullName>David Lee</fullName>
                </value>
                <value>
                    <fullName>Guan Tan</fullName>
                </value>
                <value>
                    <fullName>Hiroyasu Lee</fullName>
                </value>
                <value>
                    <fullName>Jonathan Harris Evans</fullName>
                </value>
                <value>
                    <fullName>Jose Ferreira</fullName>
                </value>
                <value>
                    <fullName>Juergen Heim</fullName>
                </value>
                <value>
                    <fullName>Karine Leroux</fullName>
                </value>
                <value>
                    <fullName>Maria Montes</fullName>
                </value>
                <value>
                    <fullName>Mark Kayserman</fullName>
                </value>
                <value>
                    <fullName>Matilda Persson</fullName>
                </value>
                <value>
                    <fullName>Mauro Simoncini</fullName>
                </value>
                <value>
                    <fullName>Maxime Dilly</fullName>
                </value>
                <value>
                    <fullName>Mike McCrady</fullName>
                </value>
                <value>
                    <fullName>Nina Zarour</fullName>
                </value>
                <value>
                    <fullName>Osen Akkemik</fullName>
                </value>
                <value>
                    <fullName>Partner Alias</fullName>
                </value>
                <value>
                    <fullName>Phyllis Mather</fullName>
                </value>
                <value>
                    <fullName>Rex Lofland</fullName>
                </value>
                <value>
                    <fullName>Ron Baxter</fullName>
                </value>
                <value>
                    <fullName>Ron Grizer</fullName>
                </value>
                <value>
                    <fullName>Ronnie Wong</fullName>
                </value>
                <value>
                    <fullName>Sanjay Pai</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_is_the_competitor_in_this_account__c</fullName>
        <label>Who is the competitor in this account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Will_this_deal_involve_SMART_Use_Cases__c</fullName>
        <label>Will this deal involve SMART Use Cases?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Your_Company_Name__c</fullName>
        <label>Your Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_Email__c</fullName>
        <label>Your Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Your_Name__c</fullName>
        <label>Your Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_Title__c</fullName>
        <label>Your Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>competitive_displacement_opportunity__c</fullName>
        <inlineHelpText>Is this a competitive displacement opportunity for Genesys?</inlineHelpText>
        <label>Competitive Displacement Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>competitive_opp_description__c</fullName>
        <inlineHelpText>Please describe the competitive opportunity in this account and describe the partner’s role in competitive positioning</inlineHelpText>
        <label>Competitive Opp Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>for_workflow__c</fullName>
        <label>for workflow</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Partner Portal Opportunity Registration</label>
    <listViews>
        <fullName>ANZ</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Channel_Manager_Approved__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity_Channel_Manager__c</field>
            <operation>equals</operation>
            <value>Vaughan Webster</value>
        </filters>
        <filters>
            <field>Opportunity_Channel_Manager__c</field>
            <operation>equals</operation>
            <value>Anthony Valmorbida</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <label>ANZ</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Customer_Contact_Email__c</columns>
        <columns>Customer_Contact_Name__c</columns>
        <columns>Customer_End_User_Company_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Opportunity__c</columns>
        <columns>Regional_Channel_Lead__c</columns>
        <columns>Sales_Leader__c</columns>
        <filterScope>Everything</filterScope>
        <label>All1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Approved_Deal_Reg</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Regions__c</columns>
        <columns>Vendor_in_Place__c</columns>
        <columns>Promotional_Offer__c</columns>
        <columns>Campaign_ID__c</columns>
        <columns>End_User_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approval_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>License_Amount__c</columns>
        <columns>Annual_Contract_Value_Amount__c</columns>
        <columns>Account__c</columns>
        <columns>Is_this_a_new_logo_or_green_field_opp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Request Submitted,Request Pending,Approved</value>
        </filters>
        <label>Approved &amp; Pending Deal Reg</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approved_Pending_Deal_Reg_PureBridge1</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Regions__c</columns>
        <columns>Vendor_in_Place__c</columns>
        <columns>Promotional_Offer__c</columns>
        <columns>Campaign_ID__c</columns>
        <columns>End_User_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approval_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>License_Amount__c</columns>
        <columns>Annual_Contract_Value_Amount__c</columns>
        <columns>Account__c</columns>
        <columns>Is_this_a_new_logo_or_green_field_opp__c</columns>
        <columns>Country_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Request Submitted,Request Pending,Approved</value>
        </filters>
        <filters>
            <field>Vendor_in_Place__c</field>
            <operation>equals</operation>
            <value>Alcatel-Lucent,Avaya (Nortel),NEC</value>
        </filters>
        <filters>
            <field>Regions__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>Approved &amp; Pending Deal Reg - PureBridge</label>
        <language>en_US</language>
        <sharedTo>
            <group>EMEA_Region_Sales_Leader</group>
            <group>EMEA_Sales_Leader_Readwrite</group>
            <group>EMEA_Sales_Leader_Readwrite_RI_P</group>
            <group>Global_Sales_Operations</group>
            <group>Scott_Wise_Group</group>
            <group>Sean_Straus</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Local_Channel_Manager</fullName>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Local Channel Manager</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NorthAmerica_Deal_Registrations</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>If_Yes__c</columns>
        <columns>Vendor_in_Place__c</columns>
        <columns>Promotional_Offer__c</columns>
        <columns>Campaign_ID__c</columns>
        <columns>Opportunity__c</columns>
        <columns>End_User_Account__c</columns>
        <columns>Annual_Contract_Value_Amount__c</columns>
        <columns>License_Amount__c</columns>
        <columns>Your_Company_Name__c</columns>
        <columns>Account_Owner__c</columns>
        <columns>End_Date__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Regions__c</field>
            <operation>equals</operation>
            <value>North America</value>
        </filters>
        <label>NorthAmerica Deal Registrations</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Approval</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Regions__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approval_Status__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Approval</value>
        </filters>
        <label>Pending Approval</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_Approval1</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Regions__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approval_Status__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Awaiting Approval</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>7/31/2015 12:00 AM</value>
        </filters>
        <label>Pending Approval Old</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Regional_Channel_Lead</fullName>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>Customer_Contact_Name__c</columns>
        <columns>Customer_Contact_Email__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Regions__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Regional Channel Lead</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rejected</fullName>
        <columns>NAME</columns>
        <columns>Who_at_Genesys_is_your_Channel_Manager__c</columns>
        <columns>Account__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Regions__c</columns>
        <columns>Account_Owner__c</columns>
        <columns>Customer_Contact_Email__c</columns>
        <columns>Customer_Contact_Name__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Customer Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Portal Opportunity Registration</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Designated_Partner_Contact__c</fullName>
        <label>Designated Partner Contact</label>
    </sharingReasons>
    <validationRules>
        <fullName>Only_RCL_Edit_End_Date</fullName>
        <active>true</active>
        <description>Only RCL can edit the end date</description>
        <errorConditionFormula>AND(NOT($User.BypassValidationRules__c),NOT(OR($User.Id=Regional_Channel_Lead__r.Id,contains($Profile.Name,&apos;Admin&apos;),contains($Profile.Name,&apos;Data Administrator&apos;))),ISCHANGED(End_Date__c))</errorConditionFormula>
        <errorMessage>You do not have permission to modify the End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_DR_subscription_smart_qual</fullName>
        <active>true</active>
        <description>Partner portal user cannot create a Deal Registration with offering detail as subscription if NOT SMART qualified and Subscription Qualified (noted on partner account)</description>
        <errorConditionFormula>(Account__r.SMART_Qualified__c = FALSE

&amp;&amp; Account__r.Subscription_Qualified__c = FALSE)

&amp;&amp;  ISPICKVAL(Offering_Details__c, &quot;Subscription&quot;)

&amp;&amp;  $User.Partner_Portal_Access__c = TRUE

&amp;&amp; NOT( $User.BypassValidationRules__c = true)</errorConditionFormula>
        <errorMessage>The partner account submitting this Deal Registration is not Subscription &amp; SMART Qualified. Please contact your channel manager for details on becoming qualified.</errorMessage>
    </validationRules>
</CustomObject>